--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "miki-whatsapp-bot",
-  "version": "0.0.0",
-  "description": "Feature-rich WhatsApp chatbot powered by Natural Language Processing.",
-  "main": "js/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/riozec/miki-whatsapp-bot.git"
-  },
-  "keywords": [
-    "nodejs",
-    "javascript",
-    "nlp",
-    "bot",
-    "natural-language-processing",
-    "games",
-    "typescript",
-    "utilities",
-    "chatbot",
-    "whatsapp",
-    "whatsapp-bot",
-    "baileys",
-    "lolhuman"
-  ],
-  "author": "RiozeC",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/riozec/miki-whatsapp-bot/issues"
-  },
-  "homepage": "https://github.com/riozec/miki-whatsapp-bot#readme"
+	"name": "miki-whatsapp-bot",
+	"version": "0.0.0",
+	"description": "Feature-rich WhatsApp chatbot.",
+	"main": "js/index.js",
+	"scripts": {
+		"build": "tsc",
+		"start": "node js/index",
+		"apply-backup": "node js/apply-backup"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/riozec/miki-whatsapp-bot.git"
+	},
+	"keywords": [
+		"nodejs",
+		"javascript",
+		"nlp",
+		"bot",
+		"games",
+		"typescript",
+		"utilities",
+		"chatbot",
+		"whatsapp",
+		"whatsapp-bot",
+		"baileys",
+		"lolhuman"
+	],
+	"author": "RiozeC",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/riozec/miki-whatsapp-bot/issues"
+	},
+	"homepage": "https://github.com/riozec/miki-whatsapp-bot#readme",
+	"dependencies": {
+		"@adiwajshing/baileys": "^4.1.0",
+		"dotenv": "^16.0.0",
+		"kao.moji": "^0.1.3",
+		"link-preview-js": "^2.1.13",
+		"lodash": "^4.17.21",
+		"promptees": "^2.0.0",
+		"qrcode-terminal": "^0.12.0"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.14.182",
+		"@types/ws": "^8.5.3",
+		"typescript": "^4.7.3"
+	}
 }
