--- a/package.json
+++ b/package.json
@@ -1,39 +1,12 @@
 {
-	"name": "miki-whatsapp-bot",
-	"version": "0.0.0",
-	"description": "Feature-rich WhatsApp chatbot.",
 	"main": "js/index.js",
 	"scripts": {
 		"build": "tsc",
 		"start": "node js/index",
 		"apply-backup": "node js/apply-backup"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/riozec/miki-whatsapp-bot.git"
-	},
-	"keywords": [
-		"nodejs",
-		"javascript",
-		"nlp",
-		"bot",
-		"games",
-		"typescript",
-		"utilities",
-		"chatbot",
-		"whatsapp",
-		"whatsapp-bot",
-		"baileys",
-		"lolhuman"
-	],
-	"author": "RiozeC",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/riozec/miki-whatsapp-bot/issues"
-	},
-	"homepage": "https://github.com/riozec/miki-whatsapp-bot#readme",
 	"dependencies": {
-		"@adiwajshing/baileys": "^4.1.0",
+		"@whiskeysockets/baileys": "^6.4.0",
 		"dotenv": "^16.0.0",
 		"kao.moji": "^0.1.3",
 		"link-preview-js": "^2.1.13",
